--- a/.verb.md
+++ b/.verb.md
@@ -1,4 +1,4 @@
-# {%= name %} {%= badge("fury") %}
+# {%= name %} {%= badge("fury") %} {%= badge("travis") %} {%= badge("built-with-grunt") %}
 
 > {%= description %}
 
@@ -31,36 +31,18 @@ _(loosely in this order...)_
 - [x] add Grunfile
 - [ ] coverage
 - [ ] API documentation, written as code comments
-- [ ] Add the event to the changelogs of both libraries
+- [ ] Add links to website docs for any methods that have more info
+- [ ] enable travis
+- [ ] add travis badge
 
 **Next:**
 
 - [ ] replace core `grunt.{%= replace(name, "grunt-legacy-", "") %}` internal module with `{%= name %} `
 - [ ] remove any dependencies that are no longer needed from grunt.
-- [ ] enable travis
-- [ ] add travis badge
+- [ ] Add the event to the changelogs of both libraries
 
 ## Related projects
 {%= related(['grunt', 'grunt-cli', 'grunt-legacy-log', 'grunt-legacy-util']) %}
-
-<!--strip
-After all modules are published to npm:
- 1. delete the above `related` helper
- 2. uncomment the one below
- 3. remove the extra `%` after the first delimiter
- 4. run `verb`
--->
-
-<!--strip {%%= related([
-  'grunt-legacy-config',
-  'grunt-legacy-event',
-  'grunt-legacy-fail',
-  'grunt-legacy-file',
-  'grunt-legacy-log',
-  'grunt-legacy-option',
-  'grunt-legacy-template',
-  'grunt-legacy-util'
-]) %} -->
 
 ## Running tests
 {%= include("tests-grunt") %}
